monticore-generator/src/test/resources/cocos/invalid/A0278/A0278b.mc4
/* (c) https://github.com/MontiCore/monticore */
package cocos.invalid.A0278;

grammar A0278b extends cocos.invalid.A0278.A0278a{

B = A;

}
